[gd_scene load_steps=14 format=3 uid="uid://bxn5a21sgvak1"]

[ext_resource type="Script" uid="uid://dbrqqperet00c" path="res://ground_tile.gd" id="1_8bx53"]
[ext_resource type="Material" uid="uid://cqruh8d8n01ls" path="res://sky.material" id="1_wdxmb"]

[sub_resource type="Gradient" id="Gradient_hm4o8"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6wt0j"]
seed = 3
frequency = 0.005
fractal_octaves = 7
fractal_lacunarity = 3.11
fractal_gain = 0.75
fractal_weighted_strength = 0.08

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_is67y"]
width = 1024
in_3d_space = true
color_ramp = SubResource("Gradient_hm4o8")
noise = SubResource("FastNoiseLite_6wt0j")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cc6lb"]
albedo_color = Color(0.250575, 0.39, 0.2379, 1)
albedo_texture = SubResource("NoiseTexture2D_is67y")

[sub_resource type="PlaneMesh" id="PlaneMesh_t7ks8"]
material = SubResource("StandardMaterial3D_cc6lb")
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gnp7m"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="PlaneMesh" id="PlaneMesh_oy0rm"]
size = Vector2(3, 100)
center_offset = Vector3(1.5, 2.08165e-12, 2.08165e-12)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_e5fqw"]
data = PackedVector3Array(3, 0, 50, 0, 0, 50, 3, 0, -50, 0, 0, 50, 0, 0, -50, 3, 0, -50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7rx1a"]
data = PackedVector3Array(3, 0, 50, 0, 0, 50, 3, 0, -50, 0, 0, 50, 0, 0, -50, 3, 0, -50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_m6rg8"]
data = PackedVector3Array(3, 0, 50, 0, 0, 50, 3, 0, -50, 0, 0, 50, 0, 0, -50, 3, 0, -50)

[sub_resource type="NavigationMesh" id="NavigationMesh_f58ed"]
vertices = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, -50)
polygons = [PackedInt32Array(0, 1, 2), PackedInt32Array(1, 3, 2)]

[node name="GroundTile" type="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
mesh = SubResource("PlaneMesh_t7ks8")
script = ExtResource("1_8bx53")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_gnp7m")

[node name="EastWall" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 50, 0, 0)
mesh = SubResource("PlaneMesh_oy0rm")
surface_material_override/0 = ExtResource("1_wdxmb")

[node name="StaticBody3D" type="StaticBody3D" parent="EastWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EastWall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_e5fqw")

[node name="WestWall" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(4.37079e-08, 0.99992, -8.74158e-08, 0.99992, -4.37079e-08, 0, -3.82107e-15, -8.74158e-08, -0.99992, -50, 0, 0)
mesh = SubResource("PlaneMesh_oy0rm")
surface_material_override/0 = ExtResource("1_wdxmb")

[node name="StaticBody3D" type="StaticBody3D" parent="WestWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WestWall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7rx1a")

[node name="NorthWall" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, -3.51437e-21, 4.37114e-08, 1, -4.37114e-08, 2.08165e-12, 2.08165e-12, -50)
mesh = SubResource("PlaneMesh_oy0rm")
surface_material_override/0 = ExtResource("1_wdxmb")

[node name="StaticBody3D" type="StaticBody3D" parent="NorthWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NorthWall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_m6rg8")

[node name="SouthWall" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.5619e-15, 4.37114e-08, -1, 1, -4.37114e-08, -3.48787e-16, -4.37114e-08, -1, -4.37114e-08, 2.08165e-12, 2.08165e-12, 50)
mesh = SubResource("PlaneMesh_oy0rm")
surface_material_override/0 = ExtResource("1_wdxmb")

[node name="StaticBody3D" type="StaticBody3D" parent="SouthWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SouthWall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_m6rg8")

[node name="DebugLabels" type="Node3D" parent="."]

[node name="CenterLabel" type="Label3D" parent="DebugLabels"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.05, 0)
font_size = 64

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_f58ed")
